# nested_workspace

./: .gitignore  .rgignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  publish.yml
cargo-nested/: Cargo.toml  README.md
cargo-nested/src/: main.rs
dir-entry-ext/: Cargo.toml
dir-entry-ext/src/: lib.rs
example/: Cargo.toml
example/nested-workspace-a/add/src/: lib.rs
example/nested-workspace-a/sub/: Cargo.toml
example/nested-workspace-b/: Cargo.toml
example/nested-workspace-b/div/: Cargo.toml
example/nested-workspace-b/div/src/: lib.rs
example/nested-workspace-b/mul/src/: lib.rs
example/nested_workspace_a/: Cargo.toml
example/nested_workspace_a/add/: Cargo.toml
example/nested_workspace_a/sub/src/: lib.rs
example/nested_workspace_b/mul/: Cargo.toml
fixtures/conflicting_features/: Cargo.toml
fixtures/conflicting_features/big_endian/: Cargo.toml
fixtures/conflicting_features/big_endian/.cargo/: config.toml
fixtures/conflicting_features/big_endian/src/: lib.rs
fixtures/conflicting_features/little_endian/: Cargo.toml
fixtures/conflicting_features/little_endian/.cargo/: config.toml
fixtures/conflicting_features/little_endian/src/: lib.rs
fixtures/conflicting_features/to_bytes/: Cargo.toml
fixtures/conflicting_features/to_bytes/.cargo/: config.toml
fixtures/conflicting_features/to_bytes/src/: lib.rs
fixtures/cycle/: Cargo.toml
fixtures/cycle/dependent/: Cargo.toml
fixtures/empty_workspace/.cargo/: config.toml
fixtures/git_dependency/: Cargo.toml
fixtures/git_dependency/git_dependency_package/: Cargo.toml
fixtures/git_dependency/package/: Cargo.toml
fixtures/multi_layer/: Cargo.toml
fixtures/multilayer/: Cargo.toml
fixtures/multilayer/workspace/: Cargo.toml
fixtures/multiple_test_targets/: Cargo.toml
fixtures/multiple_test_targets/multiple_test_targets_package/: Cargo.toml
fixtures/multiple_test_targets/package/: Cargo.toml
fixtures/multiple_test_targets/src/: lib.rs
fixtures/multiple_toolchains/: Cargo.toml
fixtures/multiple_toolchains/beta/: Cargo.toml
fixtures/multiple_toolchains/nightly/: Cargo.toml
fixtures/no_nw_metadata/: Cargo.toml
fixtures/no_roots/: Cargo.toml  build.rs
fixtures/root_and_non_root_packages/: Cargo.toml
fixtures/root_and_non_root_packages/root_package/: Cargo.toml
fixtures/root_and_non_root_packages/root_package/non_root_package/: Cargo.toml
fixtures/root_and_non_root_packages/root_package/non_root_package/src/: lib.rs
fixtures/root_and_non_root_packages/root_package/src/: lib.rs
fixtures/root_with_dotdot_root/: Cargo.toml
fixtures/root_with_dotdot_root/workspace/: Cargo.toml
fixtures/root_with_no_workspace/: Cargo.toml
fixtures/runner/: Cargo.toml
fixtures/runner/.cargo/: config.toml
fixtures/runner/package/: Cargo.toml
fixtures/runner/runner_package/: Cargo.toml
nested-workspace/: Cargo.toml
nested-workspace/src/: lib.rs  util.rs
nested-workspace/tests/: ci.rs  manifest_path.rs  stress.rs  trycmd.rs
nested-workspace/tests/trycmd/check/: conflicting_features.toml  multilayer.stderr  multiple_test_targets.stdout  multiple_test_targets.toml  multiple_toolchains.stderr  multiple_toolchains.toml  no_roots.toml  root_and_non_root_packages.stdout
nested-workspace/tests/trycmd/nw_clean/: empty_workspace.stderr  multiple_test_targets.toml  multiple_toolchains.toml  root_and_non_root_packages.toml
nested-workspace/tests/trycmd/other/: to_bytes_all_features.stderr
nested-workspace/tests/trycmd/test/: conflicting_features.toml  multilayer.stderr  multiple_test_targets.toml  multiple_toolchains.stderr  multiple_toolchains.toml  no_nw_metadata.stderr  no_roots.stdout
nested_workspace/: Cargo.toml
nested_workspace/src/: command.rs  lib.rs  util.rs
nested_workspace/tests/: ci.rs  trycmd.rs
runner/: Cargo.toml
runner/src/: main.rs
scripts/: publish.sh  rename.sh
snapbox-0.6.21/: .cargo_vcs_info.json  Cargo.toml
snapbox-0.6.21/src/report/: diff.rs
src/: command.rs  lib.rs  reentrancy_guard.rs  util.rs
tests/: build_script_always_runs.rs  ci.rs  clippy.rs  stress.rs  supply_chain.json  trycmd.rs  util.rs  z_stress.rs
tests/build_script_always_runs/: main.rs  util.rs
tests/trycmd/after/: multiple_test_targets_no_args.stderr  multiple_test_targets_no_args.stdout  root_and_non_root_package_no_workspace.stderr  root_and_non_root_package_no_workspace.stdout  root_and_non_root_package_no_workspace.toml  to_bytes_all_features.stderr
tests/trycmd/before/: git_dependency_fetch.stderr  git_dependency_fetch.toml
tests/trycmd/check/: conflicting_features.toml  cycle.stderr  cycle.toml  empty_workspace.toml  git_dependency.stderr  git_dependency.toml  multilayer.stderr  multilayer.stdout  multilayer.toml  multiple_test_targets.stderr  multiple_test_targets.toml  multiple_toolchains.toml  no_nw_metadata.stderr  no_nw_metadata.stdout  no_nw_metadata.toml  no_roots.toml  root_and_non_root_packages.stderr  root_and_non_root_packages.toml  root_with_dotdot_root.stderr  root_with_dotdot_root.stdout  root_with_dotdot_root.toml  root_with_no_workspace.stdout  root_with_no_workspace.toml  runner.stdout  runner.toml
tests/trycmd/nested_clean/: conflicting_features.toml  cycle.stderr  cycle.toml  empty_workspace.stderr  empty_workspace.toml  git_dependency.toml  multilayer.toml  multiple_test_targets.toml  multiple_toolchains.toml  no_nw_metadata.stderr  no_nw_metadata.toml  no_roots.toml  root_and_non_root_packages.toml  root_with_dotdot_root.stderr  root_with_dotdot_root.toml  root_with_no_workspace.stderr  root_with_no_workspace.toml  runner.toml
tests/trycmd/nw_clean/: conflicting_features.toml  empty_workspace.toml  git_dependency.toml  multilayer.toml  multiple_test_targets.stderr  multiple_test_targets.toml  multiple_toolchains.toml  no_nw_metadata.toml  no_roots.toml  root_and_non_root_packages.toml
tests/trycmd/other/: multiple_test_targets_no_args.stderr  multiple_test_targets_no_args.stdout  multiple_test_targets_no_args.toml  root_and_non_root_package_no_workspace.toml  to_bytes_all_features.toml
(+103 files in other folders)
