[package]
name = "nested_workspace"
version = "0.3.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Run Cargo commands on workspaces in workspaces"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smoelius/nested_workspace"
rust-version = "1.87"

[dependencies]
anstyle = "1.0"
anyhow = "1.0"
# smoelius: `cargo_metadata` 0.20.0 pulls in too many new dependencies.
cargo_metadata = "=0.19"
env_logger = "0.11"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.4"
regex = "1.11"
similar-asserts = "1.7"
tempfile = "3.19"
toml = "0.8"
trycmd = "0.15"
walkdir = "2.5"

[features]
__disable_offline_check = []
__disable_supply_chain_test = []

[lib]
doctest = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow-attributes = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace]
exclude = ["fixtures"]
members = ["example"]
resolver = "3"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
]
