[package]
name = "nested_workspace"
version = "0.7.3"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Run Cargo commands on workspaces in workspaces"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smoelius/nested_workspace"
rust-version = "1.89"

[dependencies]
anstyle = "1.0"
anyhow = { workspace = true }
cargo_metadata = "0.19"
elaborate = "0.1"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.37"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.5"
regex = "1.11"
similar-asserts = "1.7"
tempfile = "3.19"
toml = "0.9"
trycmd = "0.15"
walkdir = "2.5"

dir-entry-ext = { path = "dir-entry-ext", features = ["walkdir"] }

[features]
__disable_offline_check = []
__disable_supply_chain_test = []

[lints]
workspace = true

[workspace]
exclude = ["fixtures", "snapbox"]
members = ["cargo-nested", "dir-entry-ext", "example", "runner"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
nested_workspace = { version = "0.7.3", path = "." }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow-attributes = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
]

[patch.crates-io]
snapbox = { path = "snapbox-0.6.21" }
