[package]
name = "cargo-nested"
version = "0.7.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "A Cargo subcommand to run commands on nested workspaces"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smoelius/nested_workspace"

[dependencies]
anyhow = { workspace = true }
nested_workspace = { workspace = true }

[lints]
workspace = true
