[package]
name = "nested_workspace_example"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
nested_workspace = { workspace = true }

[dev-dependencies]
nested_workspace = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[package.metadata.nested_workspace]
roots = ["nested_workspace_a", "nested_workspace_b"]
