[package]
name = "nested-workspace-example"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
nested-workspace = { workspace = true }

[dev-dependencies]
nested-workspace = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[package.metadata.nested-workspace]
roots = ["nested-workspace-a", "nested-workspace-b"]
