[package]
name = "nested-workspace"
version = "0.3.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Run Cargo commands on workspaces in workspaces"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/smoelius/nested-workspace"
rust-version = "1.87"

[lib]
doctest = false

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
ctor = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
trycmd = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[features]
__disable_offline_check = []

[lints]
workspace = true
