[package]
name = "conflicting_features"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
nested_workspace = { path = "../../nested_workspace" }

[dev-dependencies]
nested_workspace = { path = "../../nested_workspace" }

[lib]
doctest = false

[package.metadata.nested_workspace]
roots = ["big_endian", "little_endian", "to_bytes"]
