[package]
name = "conflicting_features"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
nested-workspace = { path = "../../nested-workspace" }

[dev-dependencies]
nested-workspace = { path = "../../nested-workspace" }

[lib]
doctest = false

[package.metadata.nested-workspace]
roots = ["big_endian", "little_endian", "to_bytes"]
