[package]
name = "root_with_dotdot_root"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
nested_workspace = { path = "../.." }

[dev-dependencies]
nested_workspace = { path = "../.." }

[lib]
doctest = false

[package.metadata.nested_workspace]
roots = ["../root_with_dotdot_root/workspace"]
